[tool.poetry]
name = "streamlit-two-way-binding"
version = "0.1.0"
description = ""
authors = ["Jason Yee <446031+jwsy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
